[update] Kotlin version 1.2.71
Fuel Vesion 1.15.1
Moshi Version 1.7.0

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,17 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == "com.android.support") {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion "26.+"
+            }
+        }
+    }
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -30,8 +41,11 @@ dependencies {
 
 
     implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
+    //noinspection GradleDependency
     implementation "com.github.kittinunf.fuel:fuel-android:$fuel_version"
     implementation "com.github.kittinunf.fuel:fuel-moshi:$fuel_version"
+
+    implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
