--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,13 +38,14 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 
     implementation "com.github.kittinunf.fuel:fuel:$fuel_version"
     //noinspection GradleDependency
     implementation "com.github.kittinunf.fuel:fuel-android:$fuel_version"
-    implementation "com.github.kittinunf.fuel:fuel-moshi:$fuel_version"
 
+    implementation "com.squareup.moshi:moshi:$moshi_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
     testImplementation 'junit:junit:4.12'
